# crypto-news-agent

./: .env  .env.test  .gitignore  ARCHITECTURE_IMPROVEMENT_PLAN.md  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  unresolved-questions.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: check_ollama.py  crud.py  deps.py  exceptions.py  main.py  models.py  routes.py  scheduler.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4ce808250de3_drop_news_sources_table.py  523ea05134fd_enable_pgvector_extension.py  56dd3eeeadae_create_news_sources_and_news_articles_.py  7b5594e385cc_add_hnsw_index_to_news_articles.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: news.py  questions.py
backend/app/api/schemas/: news.py
backend/app/core/: config.py  db.py
backend/app/features/embeddings/: service.py
backend/app/features/news/: article_processor.py  ingestion_service.py  models.py  repository.py  router.py  rss_fetcher.py  schemas.py
backend/app/features/news/scripts/: __init__.py  seed_sources.py
backend/app/features/questions/: models.py  rag_service.py  router.py
backend/app/scripts/: __init__.py  backend_pre_start.py  seed_sources.py
backend/app/services/: article_processor.py  content_moderation.py  embeddings.py  ingestion.py  news_repository.py  rag.py  rss_fetcher.py  url_utils.py
backend/app/shared/: check_ollama.py  content_moderation.py  deps.py  embeddings.py  exceptions.py  models.py  scheduler.py
backend/scripts/: prestart.sh  seed_sources.py  test-all.sh  test-e2e.sh  test-integration.sh  test-unit.sh
backend/tests/: conftest.py  test_url_utils.py
backend/tests/e2e/: test_full_qa_flow.py
backend/tests/integration/: test_api_news.py  test_api_questions.py  test_rss_fetcher_integration.py  test_seed_sources.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/unit/: test_content_moderation.py  test_crud_news_article.py  test_crud_news_source.py  test_embeddings.py  test_ingestion_service.py  test_rag_service.py  test_rss_fetcher.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/tests/: articles-sorting-pagination.spec.ts  articles.spec.ts  chat-streaming-completion.spec.ts  chat-streaming.spec.ts  chat.spec.ts  home.spec.ts  navigation-flow.spec.ts
scripts/: init-ollama.sh  ollama-entrypoint.sh  pull-ollama-models.sh
specs/001-crypto-news-agent/: UPDATES.md  data-model.md  plan.md  quickstart.md  research.md  (+3 more)
(+26 files in other folders)
