[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    # FastAPI and web framework
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "pydantic>2.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "httpx<1.0.0,>=0.25.1",
    "tenacity<9.0.0,>=8.2.3",
    # Database
    "alembic<2.0.0,>=1.12.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    "pgvector>=0.4.1",
    # LLM and AI
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    # News ingestion
    "feedparser>=6.0.12",
    "apscheduler>=3.11.1",
    # Monitoring
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "newspaper3k>=0.2.8",
    "python-dateutil>=2.9.0.post0",
    "lxml-html-clean>=0.4.3",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
    "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require real services)",
    "e2e: marks tests as end-to-end tests (full system flow)",
    "slow: marks tests as slow running (>5 seconds)",
    "asyncio: marks tests as async tests",
    "flaky: marks tests as flaky (may fail due to external dependencies)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
